2003-12-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c, cong-node.h

	Moved detection of unneccesary whitespace TEXT nodes into a new function; used it for handling cursor movement to skip these nodes

	* cong-editor-area-flow-holder-blocks.c, cong-editor-widget3.c

	Fixes for bug #123367 by Anders Petersson <demitar@worldforge.org>

	* file.c

	Cleanups of source

2003-11-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-file-export.c, cong-file-import.c, cong-file-open.c, cong-file-print.c, cong-file-save.c, file.c, global.h, plugin-save-dispspec.c

	New file-selection interface, to begin transition to GtkFileChooser
	
	* cong-file-selection.h, Makefile.am

	New file

2003-11-19  Duraid Madina

	* global.h
	portability bugfix
	
2003-11-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* tree.c

	Fix for bug #127026 (crash when using cut from popup menu)

2003-11-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element.c, gxx-object-from-xml-tree.h

	Support missing xml:lang attribute for element names and descriptions
	
	* cong-document.c, cong-document.h

	Added cong_document_node_can_be_deleted test function

2003-11-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element-gxx.h, gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, gxx-impl-object-to-xml-tree.c, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h

	Use xml:lang instead of language attribute; started adding namespace support to gxx

	* cong-dispspec-element.c, cong-dispspec.c, cong-dispspec.h, cong-editor-node.c, cong-node.h, cong-overview-view.c, plugin-cleanup-source.c

	Removed paragraph type

	* cong-app.c, cong-app.h, cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-document.c, gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h
